--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                                     </div>
                                     <div class="col-9">
                                         <span>© 2022-23 Design with by <a
-                                                href="https://firmbee.com/solutions/free-invoicing-app-billing-software"
+                                                href=""
                                                 title="Firmbee - Online Remote working app for collaboration & task management"
                                                 target="_blank">Gabriel Samutumwa</a></span>
                                     </div>
@@ -515,13 +515,13 @@
                     <div class="container">
                         <div class="row justify-content-start align-items-end">
                             <div class="col-3">
-                                <img src="img/icons/firmbee.svg" alt="firmbee">
+                                <!-- <img src="img/icons/firmbee.svg" alt="firmbee"> -->
                             </div>
                             <div class="col-9">
-                                <span>© 2022-23 Firmbee. Design with by <a
-                                        href="https://firmbee.com/solutions/free-invoicing-app-billing-software"
-                                        title="Firmbee - Online Remote working app for collaboration & task management"
-                                        target="_blank">Firmbee</a></span>
+                                <span>© 2022-23 Design with by <a
+                                    href=""
+                                    title="Firmbee - Online Remote working app for collaboration & task management"
+                                    target="_blank">Gabriel Samutumwa</a></span>
                             </div>
                         </div>
 
