--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="navbar-nav p-5">
                         <a class="nav-item nav-link active text-center mx-3" href="#home">Home</a>
                         <a class="nav-item nav-link text-center mx-3" href="#team">About</a>
-                        <a class="nav-item nav-link text-center mx-3" href="#portfolio">Portfolios</a>
+                        <a class="nav-item nav-link text-center mx-3" href="#portfolio">Portfolio</a>
                         <a class="nav-item nav-link text-center mx-3" href="#contact">Contact</a>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-12 col-md-6">
-                            <h2>About <span class="highlighted">me</span></h2>
+                            <h2>About <span class="highlighted">Me</span></h2>
                             <p class="mt-5">Hello! My name is Gabriel and I enjoy creating things that live on the internet. From a young age, I've always been fascinated with Technology. I have been working as a freelance designer and Full Stack developer since 2018. I use my creative side to design and my logical side to code. As a bonus, being both designer and developer allows me to make sure that no details are lost in translation.</p>
                         </div>
                         <div class="col-12 col-md-6">
