--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                     <div class="text">
                                         <h3>Workshop Website</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#">See more</a>
+                                        <a class="see-more-button" href="#">link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
@@ -262,7 +262,7 @@
                                     <div class="text">
                                         <h3>Branding Website</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="portfolio.html">See more</a>
+                                        <a class="see-more-button" href="#">link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
@@ -284,7 +284,7 @@
                                     <div class="text">
                                         <h3>Website</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#">See more</a>
+                                        <a class="see-more-button" href="#">link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
@@ -295,7 +295,7 @@
                                     <div class="text">
                                         <h3>Job Website</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#">See more</a>
+                                        <a class="see-more-button" href="#">link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
@@ -317,7 +317,7 @@
                                     <div class="text">
                                         <h3>CM System </h3>
                                         <p>Customer</p>
-                                        <button class="see-more-button">See more</button>
+                                        <button class="see-more-button">link will be active soon</button>
                                     </div>
                                 </figure>
                             </div>
