--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                     <div class="text">
                                         <h3>Brand leaflet</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#">See more</a>
+                                        <a class="see-more-button" href="#">link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
