--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                     <div class="text">
                                         <h3>Restaurant Website</h3>
                                         <p>Customer</p>
-                                        <a class="see-more-button" href="">link will be active soon</a>
+                                        <a class="see-more-button" href="">Link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
