--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                     <div class="text">
                                         <h3>CM System </h3>
                                         <p>Customer</p>
-                                        <button class="see-more-button">link will be active soon</button>
+                                        <button class="see-more-button">Link will be active soon</button>
                                     </div>
                                 </figure>
                             </div>
