--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                     <div class="text">
                                         <h3>Branding Website</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#">link will be active soon</a>
+                                        <a class="see-more-button" href="#">Link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
