--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                             <button class="btn-portfolio" data-filter=".c1">Brand</button>
                                         </div>
                                         <div class="col-6 col-sm-3">
-                                            <button class="btn-portfolio" data-filter=".c2">Webdesign</button>
+                                            <button class="btn-portfolio" data-filter=".c2">Web Design</button>
                                         </div>
                                         <div class="col-6 col-sm-3">
                                             <button class="btn-portfolio" data-filter=".c3">Social Media</button>
