--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                 <div id="filters" class="col-12 col-lg-8">
                                     <div class="row">
                                         <div class="col-6 col-sm-3">
-                                            <button class="btn-portfolio active" data-filter="*">All projects</button>
+                                            <button class="btn-portfolio active" data-filter="*">All Projects</button>
                                         </div>
                                         <div class="col-6 col-sm-3">
                                             <button class="btn-portfolio" data-filter=".c1">Brand</button>
