--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         </div>
                         <div class="row justify-content-center">
                             <div class="col-12 col-sm-6 col-lg-3">
-                                <a id="load-more" class="main-button my-5">Link will be active soon</a>
+                                <a id="load-more" class="main-button my-5">See More</a>
                             </div>
                         </div>
                     </div>
