--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                                 </div>
                                 <div class="form-group row justify-content-end">
                                     <div class="col-12 col-lg-5 mb-5 justify-content-start justify-content-sm-end">
-                                        <button type="submit" name="submit" class="main-button">Send message</button>
+                                        <button type="submit" name="submit" class="main-button">Send Message</button>
                                     </div>
                                 </div>
                             </form>
