--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                             </form>
                             <div class="media row my-5">
                                 <div class="col-12 col-lg-4">
-                                    <p>Social media</p>
+                                    <p>Social Media</p>
                                     <p class="warning">
                                         <a href="https://www.instagram.com/phenomenal_gabe/?hl=en" target="_blank">
                                             <i class="bi bi-instagram"></i>
