--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                     </p>
                                 </div>
                                 <div class="col-12 col-lg-4 mt-5 mt-md-0">
-                                    <p>Contact me via e-mail</p>
+                                    <p>E-Mail</p>
                                     <a href="mailto:gabzsamz@gmail.com" class="warning">gabzsamz@gmail.com</a>
                                 </div>
                                 <div class="col-12 col-lg-4 mt-5 mt-md-0">
