--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                 <!-- <img src="img/icons/firmbee.svg" alt="firmbee"> -->
                             </div>
                             <div class="col-9">
-                                <span>© 2022-23 Design with by <a
+                                <span>© 2022-23 Design by <a
                                     href=""
                                     title="Firmbee - Online Remote working app for collaboration & task management"
                                     target="_blank">Gabriel Samutumwa</a></span>
