--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                                     <a class="main-button btn-view-portfolio text-center" href="#portfolio">View
                                         Portfolio</a>
                                 </div>
-                                <div class="col-7 col-sm-3 col-lg-5">
+                                <!-- <div class="col-7 col-sm-3 col-lg-5">
                                     <a class="button text-center" href="Gabriel Samutumwa CV.pdf" download="">Download CV</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="row">
