--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                                 <!-- <div class="col-7 col-sm-3 col-lg-5">
                                     <a class="button text-center" href="Gabriel Samutumwa CV.pdf" download="">Download CV</a>
                                 </div> -->
+                                 <div class="col-7 col-sm-3 col-lg-5">
+                                    <a class="button text-center" href="" download="">Contact-Form</a>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
