--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div id="headingThree" class="card collapsed" data-toggle="collapse"
+                            <div id="headingTwo" class="card collapsed" data-toggle="collapse"
                                 data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 <i class="card-icon bi bi-code-slash"></i>
                                 <p class="subtitles">UI/UX  <br> Design</p>
