--- a/index.html
+++ b/index.html
@@ -485,21 +485,19 @@
                                     <a href="tel:+260950407579" class="warning">+260 95040 7579</a>
                                 </div>
                             </div>
-                            <!-- 0977585789 -->
                             <div class="footer d-none d-md-block">
                                 <div class="row justify-content-start align-items-end">
                                     <div class="col-3">
-                                        <!-- <img src="img/icons/firmbee.svg" alt="firmbee"> -->
                                     </div>
                                     <div class="col-9">
                                         <span>© 2022-23 Design by <a
                                                 href=""
                                                 title="Firmbee - Online Remote working app for collaboration & task management"
-                                                target="_blank">Gabriel Samutumwa</a></span>
+                                                target="_blank">Gabriel Samutumwa</a>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
-
                             <button class="up" onclick="topFunction()" id="top" title="Go to top">
                                 <i class="bi bi-arrow-up"></i>
                             </button>
@@ -513,6 +511,7 @@
                             src="https://maps.google.com/maps?q=lusaka&t=&z=13&ie=UTF8&iwloc=&output=embed">
                         </iframe>
                         
+                    </div>
                 </div>
                 <div class="footer d-md-none">
                     <div class="container">
