--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
 
         <!-- Third section -->
-        <section>
+        <!-- <section>
             <div class=" clients">
                 <hr>
                 <div class="container">
@@ -418,7 +418,7 @@
                 </div>
                 <hr>
             </div>
-        </section>
+        </section> -->
 
 
 
