--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                     <img class="img-fluid" src="img/portfolio/w9.jpg" alt="Website">
                                     <div class="overlay"></div>
                                     <div class="text">
-                                        <h3>Brand leaflet</h3>
+                                        <h3>Brand Leaflet</h3>
                                         <p>Personal Project</p>
                                         <a class="see-more-button" href="#">Link will be active soon</a>
                                     </div>
