--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <p>Everywhere & Every Device, Your Site Should Flow Seamlessly
-                                <br>from Smartphone to desktops, your site should look and function Seamlessly.
+                                <br>From Smartphone to desktops, your site should look and function Seamlessly.
                                 
                             </p>
                         </div>
