--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-12 col-md-6">
                             <h2>About <span class="highlighted">Me</span></h2>
-                            <p class="mt-5">Hello! My name is Gabriel and I enjoy creating things that live on the internet. From a young age, I've always been fascinated with Technology. I have been working as a freelance designer and Full Stack developer since 2018. I use my creative side to design and my logical side to code. Further more, being both designer and developer allows me to make sure that no details are lost in translation.</p>
+                            <p class="mt-5">Hello! My name is Gabriel and I enjoy creating things that live on the internet. From a young age, I've always been fascinated with Technology. I have been working as a freelance Designer and Full Stack developer since 2018. I use my creative side to design and my logical side to code. Further more, being both designer and developer allows me to make sure that no details are lost in translation.</p>
                         </div>
                         <div class="col-12 col-md-6">
                             <img class="img-fluid" src="img/Gabe1.png" alt="Team Work">
