--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-12 col-md-6">
                             <h2>About <span class="highlighted">Me</span></h2>
-                            <p class="mt-5">Hello! My name is Gabriel and I enjoy creating things that live on the internet. From a young age, I've always been fascinated with Technology. I have been working as a Freelance Designer and Full Stack Developer since 2018. I use my creative side to Design and my logical side to code. Further more, being both a Designer and a developer allows me to make sure that no details are lost in translation.</p>
+                            <p class="mt-5">Hello! My name is Gabriel and I enjoy creating things that live on the internet. From a young age, I've always been fascinated with Technology. I have been working as a Freelance Designer and Full Stack Developer since 2018. I use my creative side to Design and my logical side to code. Further more, being both a Designer and a Developer allows me to make sure that no details are lost in translation.</p>
                         </div>
                         <div class="col-12 col-md-6">
                             <img class="img-fluid" src="img/Gabe1.png" alt="Team Work">
