--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="col-12 ">
                                 <div class="d-none d-lg-block scroll-item">
                                     <i class="bi bi-mouse me-2 align-middle"></i><span class="scroll-text">Scroll
-                                        down</span>
+                                        Down</span>
                                 </div>
                             </div>
                         </div>
