--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <h2>Web <br><span class="highlighted">Design</span></h2>
                         </div>
                         <div class="col-12 col-lg-6">
-                            <p>Everywhere & Every Device, Your Site Should Flow Seamlessly
+                            <p>Everywhere & Every Device, Your Site Should Flow Seamlessly.
                                 <br>From Smartphone to desktops, your site should look and function Seamlessly.
                                 
                             </p>
