--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <h2>UI/UX <br><span class="highlighted">Design</span></h2>
                         </div>
                         <div class="col-12 col-lg-6">
-                            <p>It's all about the user experience. The Websites that i create are designed to give you the best overall experience. I focus on overall usability, ease of use and interaction between the users and system.</p>
+                            <p>It's all about the user experience, The Websites that i create are designed to give you the best overall experience. I focus on overall usability, ease of use and interaction between the users and system.</p>
                         </div>
                     </div>
 
