--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <h2>Web<br><span class="highlighted">Development</span></h2>
                         </div>
                         <div class="col-12 col-lg-6">
-                            <p>I build things for the web. I specialize in creating websites for individuals and small businesses. You shouldn't have to settle for cheap solutions or generic templates. I provide custom designs at afforable prices. Frequently your website is the first impression your customers will get, so make sure it's a good one. Since my time is split between a few different things, I'm not able to take on every project I'd like to, but I'm always looking for fun work. Take a look at my portfolio below.!</p>
+                            <p>I build things for the web, I specialize in creating websites for individuals and small businesses. You shouldn't have to settle for cheap solutions or generic templates. I provide custom designs at afforable prices. Frequently your website is the first impression your customers will get, so make sure it's a good one. Since my time is split between a few different things, I'm not able to take on every project I'd like to, but I'm always looking for fun work. Take a look at my portfolio below.!</p>
                         </div>
                     </div>
                 </div>
