--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="contact-form col-12 col-sm-6 col-md-7">
-                            <h2>Contact</h2>
+                            <h2>Contact Form</h2>
                             <form action="https://formspree.io/f/mvolnpvq" method="post" class="needs-validation" novalidate>
                                 <div class="form-group mt-5">
                                     <label class="col-12">Full Name</label>
