--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                     <label class="col-12">E-mail</label>
                                     <input class="col-12" type="email" id="email" placeholder="E-mail" name="email"
                                         required>
-                                    <div class="invalid-feedback warning">Please write a correct e-mail.</div>
+                                    <div class="invalid-feedback warning">Please write a valid e-mail.</div>
                                 </div>
                                 <div class="form-group mt-5">
                                     <label class="col-12">Message</label>
