--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                     <div class="text">
                                         <h3>Job Website</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#">Link will be active soon</a>
+                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
