--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                     <div class="text">
                                         <h3>Brand</h3>
                                         <p>Category 1</p>
-                                        <a class="see-more-button" href="portfolio.html">See more</a>
+                                        <a class="see-more-button" href="portfolio.html"><i class="bi bi-github"></i>See more</a>
                                     </div>
                                 </figure>
                             </div> -->
