--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                     <a href="mailto:gabzsamz@gmail.com" class="warning">gabzsamz@gmail.com</a>
                                 </div>
                                 <div class="col-12 col-lg-4 mt-5 mt-md-0">
-                                    <p>My Phone</p>
+                                    <p>Phone</p>
                                     <a href="tel:+260950407579" class="warning">+260 95040 7579</a>
                                 </div>
                             </div>
