--- a/index.html
+++ b/index.html
@@ -487,7 +487,8 @@
                                     <div class="col-3">
                                     </div>
                                     <div class="col-9">
-                                        <span>© 2022-23 Design by <a href="" title="Firmbee - Online Remote working app for collaboration & task management" target="_blank">Gabriel Samutumwa</a>
+                                        <span>© 2022-23 Design by 
+                                            <a href="" title="Firmbee - Online Remote working app for collaboration & task management" target="_blank">Gabriel Samutumwa</a>
                                         </span>
                                     </div>
                                 </div>
