--- a/index.html
+++ b/index.html
@@ -471,6 +471,9 @@
                                         <a href="https://wa.me/260950407579" target="_blank">
                                             <i class="bi bi-whatsapp"></i>
                                         </a>
+                                        <a href="https://wa.me/260950407579" target="_blank">
+                                            <i class="bi bi-whatsapp"></i>
+                                        </a>
                                     </p>
                                 </div>
                                 <div class="col-12 col-lg-4 mt-5 mt-md-0">
