--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@
                                         <a href="https://wa.me/260950407579" target="_blank">
                                             <i class="bi bi-whatsapp"></i>
                                         </a>
-                                        <a href="https://wa.me/260950407579" target="_blank">
-                                            <i class="bi bi-whatsapp"></i>
+                                        <a href="" target="_blank">
+                                            <i class="bi bi-github"></i>
                                         </a>
                                     </p>
                                 </div>
