--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                                         <a href="https://wa.me/260950407579" target="_blank">
                                             <i class="bi bi-whatsapp"></i>
                                         </a>
-                                        <a href="" target="_blank">
+                                        <a href="https://github.com/gabrielsamutumwa" target="_blank">
                                             <i class="bi bi-github"></i>
                                         </a>
                                     </p>
