--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
         </section> -->
 
 
-
-        <!-- Fifth section -->
+        <!-- Form section -->
         <section id="contact">
             <div class="contact">
                 <hr class="m-0">
