--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             </div>
         </section>
-        <!-- Second section -->
+        <!-- Portfolio Section -->
         <section id="portfolio">
             <!--  id only for scrolling -->
             <div class="portfolio">
