--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                                     <div class="overlay"></div>
                                     <div class="text">
                                         <h3>Website</h3>
+                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
                                         <p>Personal Project</p>
                                         <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
                                     </div>
