--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                                     <div class="overlay"></div>
                                     <div class="text">
                                         <h3>CM System </h3>
+                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
                                         <p>Customer</p>
                                         <button class="see-more-button"><i class="bi bi-github"></i>Link will be active soon</button>
                                     </div>
