--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
                                     <div class="overlay"></div>
                                     <div class="text">
                                         <h3>Restaurant Website</h3>
+                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
                                         <p>Customer</p>
                                         <a class="see-more-button" href="#"><i class="bi bi-github"></i> will be active soon</a>
                                     </div>
