--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
                         <div class="row grid">
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/sah.png" alt="Website">
+                                    <img class="img-fluid" src="img/portfolio/net1.png" alt="Website">
                                     <div class="overlay"></div>
                                     <div class="text">
-                                        <h3>Workshop Website</h3>
-                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
+                                        <h3>Netflix Clone</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i> Link will be active soon</a>
+                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i> Github</a>
+                                        <a class="see-more-button" href="https://netflix-clone-v3.web.app/">Live Demo</a>
                                         
                                     </div>
                                 </figure>
