--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                                     <div class="text">
                                         <h3>Netflix Clone</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" target="_blank" href="#"><i class="bi bi-github"></i> Github</a>
-                                        <a class="see-more-button" href="https://netflix-clone-v3.web.app/">Live Demo</a>
+                                        <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/Netflix-Clone-using-reactjs"><i class="bi bi-github"></i> Github</a>
+                                        <a class="see-more-button" target="_blank" href="https://netflix-clone-v3.web.app/">Live Demo</a>
                                         
                                     </div>
                                 </figure>
