--- a/index.html
+++ b/index.html
@@ -282,13 +282,13 @@
                             </div> -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/sah2.png" alt="Brand">
+                                    <img class="img-fluid" src="img/portfolio/sah2.2.png" alt="Brand">
                                     <div class="overlay"></div>
                                     <div class="text">
                                         <h3>Website</h3>
-                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
+                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Github</a>
+                                        <a class="see-more-button" href="#">live demo will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
