--- a/index.html
+++ b/index.html
@@ -282,12 +282,12 @@
                             </div> -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/sah2.2.png" alt="Brand">
+                                    <img class="img-fluid" src="img/portfolio/sah2.2.png    " alt="Brand">
                                     <div class="overlay"></div>
                                     <div class="text">
-                                        <h3>Website</h3>
+                                        <h3>Workshop Website</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Github</a>
+                                        <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/SAH"><i class="bi bi-github"></i>Github</a>
                                         <a class="see-more-button" href="#">live demo will be active soon</a>
                                     </div>
                                 </figure>
