--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                         <h3>Workshop Website</h3>
                                         <p>Personal Project</p>
                                         <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/SAH"><i class="bi bi-github"></i>Github</a>
-                                        <a class="see-more-button" href="#">live demo will be active soon</a>
+                                        <a class="see-more-button" href="#">Demo will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
