--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             </div> -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/sah2.2.png    " alt="Brand">
+                                    <img class="img-fluid" src="img/portfolio/sah2.2.png" alt="Brand">
                                     <div class="overlay"></div>
                                     <div class="text">
                                         <h3>Workshop Website</h3>
@@ -294,13 +294,13 @@
                             </div>
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/w5.jpg" alt="Website">
+                                    <img class="img-fluid" src="img/portfolio/twitter.png" alt="Website">
                                     <div class="overlay"></div>
                                     <div class="text">
-                                        <h3>Job Website</h3>
-                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
+                                        <h3>Twitter Clone</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
+                                        <a class="see-more-button" href="https://github.com/gabrielsamutumwa/twitter-clone-using-react"><i class="bi bi-github"></i>Github</a>
+                                        <a class="see-more-button" href="#">Demo will be active soon</a>
                                     </div>
                                 </figure>
                             </div>
