--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                         <h3>Workshop Website</h3>
                                         <p>Personal Project</p>
                                         <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/SAH"><i class="bi bi-github"></i>Github</a>
-                                        <a class="see-more-button" href="#">Demo will be active soon</a>
+                                        <a class="see-more-button" href="#">Demo unavailable</a>
                                     </div>
                                 </figure>
                             </div>
@@ -299,8 +299,8 @@
                                     <div class="text">
                                         <h3>Twitter Clone</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="https://github.com/gabrielsamutumwa/twitter-clone-using-react"><i class="bi bi-github"></i>Github</a>
-                                        <a class="see-more-button" href="#">Demo will be active soon</a>
+                                        <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/twitter-clone-using-react"><i class="bi bi-github"></i>Github</a>
+                                        <a class="see-more-button" href="#">Demo unavailable</a>
                                     </div>
                                 </figure>
                             </div>
