--- a/index.html
+++ b/index.html
@@ -257,6 +257,18 @@
                                     </div>
                                 </figure>
                             </div>
+                            <div class="col-sm-4 all c2">
+                                <figure class="hover-img">
+                                    <img class="img-fluid" src="img/portfolio/amazonclone.png" alt="Website">
+                                    <div class="overlay"></div>
+                                    <div class="text">
+                                        <h3>AmazonPrime Clone </h3>
+                                        <p>Personal Project</p>
+                                        <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/AmazonPrime-close-using-reactJS"><i class="bi bi-github"></i>Github</a>
+                                        <a class="see-more-button" target="_blank" href="https://prime-clone-2fcfe.web.app/">Live Demo</a>
+                                    </div>
+                                </figure>
+                            </div>
                             <div class="col-sm-4 all c1">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/w2.jpg" alt="Website">
@@ -315,18 +327,6 @@
                                     </div>
                                 </figure>
                             </div> -->
-                            <div class="col-sm-4 all c2">
-                                <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/cms.png" alt="Website">
-                                    <div class="overlay"></div>
-                                    <div class="text">
-                                        <h3>CM System </h3>
-                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
-                                        <p>Customer</p>
-                                        <button class="see-more-button"><i class="bi bi-github"></i>Link will be active soon</button>
-                                    </div>
-                                </figure>
-                            </div>
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/food.png" alt="Website">
