--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                 <div class="portfolio-body">
                     <div class="container">
                         <div class="row grid">
+                            <!-- NETFLIX -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/Netflixclone.png" alt="Website">
@@ -257,6 +258,7 @@
                                     </div>
                                 </figure>
                             </div>
+                            <!-- AMAZIN PRIME -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/amazonclone.png" alt="Website">
@@ -269,13 +271,13 @@
                                     </div>
                                 </figure>
                             </div>
-                            <div class="col-sm-4 all c1">
+                            <!-- SPOTFY -->
+                            <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/w2.jpg" alt="Website">
+                                    <img class="img-fluid" src="img/portfolio/134326802-536f061e-0c8b-42f4-a559-3669a47c86b5.png" alt="Website">
                                     <div class="overlay"></div>
                                     <div class="text">
-                                        <h3>Branding Website</h3>
-                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
+                                        <h3>Spotfy Clone</h3>
                                         <p>Personal Project</p>
                                         <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
                                     </div>
@@ -292,6 +294,7 @@
                                     </div>
                                 </figure>
                             </div> -->
+                            <!-- WORKSHOP -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/sah2.2.png" alt="Brand">
@@ -304,6 +307,7 @@
                                     </div>
                                 </figure>
                             </div>
+                            <!-- TWITTER -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/twitter.png" alt="Website">
@@ -339,17 +343,19 @@
                                     </div>
                                 </figure>
                             </div>
-                            <div class="col-sm-4 all c2">
+                            <!-- BRANDING WEB -->
+                            <!-- <div class="col-sm-4 all c1">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/w9.jpg" alt="Website">
+                                    <img class="img-fluid" src="img/portfolio/w2.jpg" alt="Website">
                                     <div class="overlay"></div>
                                     <div class="text">
-                                        <h3>Brand Leaflet</h3>
+                                        <h3>Branding Website</h3>
+                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
                                         <p>Personal Project</p>
                                         <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
                                     </div>
                                 </figure>
-                            </div>
+                            </div> -->
                             <!-- <div class="col-sm-4 all c3">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/w10.jpg" alt="Social">
