--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             <!-- SPOTFY -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/134326802-536f061e-0c8b-42f4-a559-3669a47c86b5.png" alt="Website">
+                                    <img class="img-fluid" src="img/portfolio/spotify (2).png" alt="Website">
                                     <div class="overlay"></div>
                                     <div class="text">
                                         <h3>Spotfy Clone</h3>
