--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                                     <div class="text">
                                         <h3>Spotfy Clone</h3>
                                         <p>Personal Project</p>
-                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
+                                        <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/Spotfy-clone-using-react-native-"><i class="bi bi-github"></i> Github</a>
+                                        <a class="see-more-button" target="_blank" href="https://spotify-react-73.web.app/">Live Demo</a>
                                     </div>
                                 </figure>
                             </div>
