--- a/index.html
+++ b/index.html
@@ -336,6 +336,17 @@
                                     </div>
                                 </figure>
                             </div> -->
+                            <!-- <div class="col-sm-4 all c1">
+                                <figure class="hover-img">
+                                    <img class="img-fluid" src="img/portfolio/w6.jpg" alt="Brand">
+                                    <div class="overlay"></div>
+                                    <div class="text">
+                                        <h3>Brand</h3>
+                                        <p>Category 1</p>
+                                        <a class="see-more-button" href="portfolio.html"><i class="bi bi-github"></i>See more</a>
+                                    </div>
+                                </figure>
+                            </div> -->
                             <!-- <div class="col-sm-4 all c3">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/w3.jpg" alt="Website">
