--- a/index.html
+++ b/index.html
@@ -310,6 +310,19 @@
                                     </div>
                                 </figure>
                             </div>
+                            <!-- FOOTBALL -->
+                            <div class="col-sm-4 all c1">
+                                <figure class="hover-img">
+                                    <img class="img-fluid" src="img/portfolio/w2.jpg" alt="Website">
+                                    <div class="overlay"></div>
+                                    <div class="text">
+                                        <h3>Branding Website</h3>
+                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
+                                        <p>Personal Project</p>
+                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
+                                    </div>
+                                </figure>
+                            </div>
                             <!-- RESTAURANT -->
                             <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
@@ -324,18 +337,6 @@
                                 </figure>
                             </div>
                             <!-- BRANDING WEB -->
-                            <!-- <div class="col-sm-4 all c1">
-                                <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/w2.jpg" alt="Website">
-                                    <div class="overlay"></div>
-                                    <div class="text">
-                                        <h3>Branding Website</h3>
-                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
-                                        <p>Personal Project</p>
-                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
-                                    </div>
-                                </figure>
-                            </div> -->
                             <!-- <div class="col-sm-4 all c1">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/w6.jpg" alt="Brand">
