--- a/index.html
+++ b/index.html
@@ -313,13 +313,13 @@
                             <!-- FOOTBALL -->
                             <div class="col-sm-4 all c1">
                                 <figure class="hover-img">
-                                    <img class="img-fluid" src="img/portfolio/w2.jpg" alt="Website">
+                                    <img class="img-fluid" src="img/portfolio/corinthianss.png" alt="Website">
                                     <div class="overlay"></div>
                                     <div class="text">
-                                        <h3>Branding Website</h3>
-                                        <a class="see-more-button" href="#">Link to live demo will be active soon</a>
-                                        <p>Personal Project</p>
-                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Link will be active soon</a>
+                                        <h3>Football Club Site</h3>
+                                        <p>Client Project</p>
+                                        <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/twitter-clone-using-react"><i class="bi bi-github"></i>Github unavailable</a>
+                                        <a class="see-more-button" href="#">Demo unavailable</a>
                                     </div>
                                 </figure>
                             </div>
