--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                     <div class="text">
                                         <h3>Football Club Site</h3>
                                         <p>Client Project</p>
-                                        <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/twitter-clone-using-react"><i class="bi bi-github"></i>Github unavailable</a>
+                                        <a class="see-more-button" target="_blank" href="#"><i class="bi bi-github"></i>Github unavailable</a>
                                         <a class="see-more-button" href="#">Demo unavailable</a>
                                     </div>
                                 </figure>
