--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                                         <h3>Football Club Site</h3>
                                         <p>Client Project</p>
                                         <a class="see-more-button" target="_blank" href="#"><i class="bi bi-github"></i>Github unavailable</a>
-                                        <a class="see-more-button" href="#">Demo unavailable</a>
+                                        <a class="see-more-button" href="#">Live Website</a>
                                     </div>
                                 </figure>
                             </div>
