--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
                                     <div class="text">
                                         <h3>Football Club Site</h3>
                                         <p>Client Project</p>
-                                        <a class="see-more-button" target="_blank" href="#"><i class="bi bi-github"></i>Github unavailable</a>
-                                        <a class="see-more-button" href="#">Live Website</a>
+                                        <a class="see-more-button" href="#"><i class="bi bi-github"></i>Github unavailable</a>
+                                        <a class="see-more-button" target="_blank" href="https://corinthianssc.com/">Live Website</a>
                                     </div>
                                 </figure>
                             </div>
