--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                             <button class="btn-portfolio active" data-filter="*">All Projects</button>
                                         </div>
                                         <div class="col-6 col-sm-3">
-                                            <button class="btn-portfolio" data-filter=".c1">Brand</button>
+                                            <button class="btn-portfolio" data-filter=".c1">Live Website</button>
                                         </div>
                                         <div class="col-6 col-sm-3">
                                             <button class="btn-portfolio" data-filter=".c2">Web Design</button>
