--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                 </figure>
                             </div>
                             <!-- RESTAURANT -->
-                            <div class="col-sm-4 all c2">
+                            <!-- <div class="col-sm-4 all c2">
                                 <figure class="hover-img">
                                     <img class="img-fluid" src="img/portfolio/food.png" alt="Website">
                                     <div class="overlay"></div>
@@ -335,7 +335,7 @@
                                         <a class="see-more-button" href="#"><i class="bi bi-github"></i> will be active soon</a>
                                     </div>
                                 </figure>
-                            </div>
+                            </div> -->
                             <!-- BRANDING WEB -->
                             <!-- <div class="col-sm-4 all c1">
                                 <figure class="hover-img">
