--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                         <h3>Twitter Clone</h3>
                                         <p>Personal Project</p>
                                         <a class="see-more-button" target="_blank" href="https://github.com/gabrielsamutumwa/twitter-clone-using-react"><i class="bi bi-github"></i>Github</a>
-                                        <a class="see-more-button" href="#">Demo unavailable</a>
+                                        <a class="see-more-button">Demo unavailable</a>
                                     </div>
                                 </figure>
                             </div>
