--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                                         <div class="col-6 col-sm-3">
                                             <button class="btn-portfolio" data-filter=".c2">Web Design</button>
                                         </div>
-                                        <div class="col-6 col-sm-3">
+                                        <!-- <div class="col-6 col-sm-3">
                                             <button class="btn-portfolio" data-filter=".c3">Social Media</button>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
